--- a/projects.html
+++ b/projects.html
@@ -108,9 +108,9 @@
 
           <div class = "project-two-col">
             <div class = "project-text">
-              The final CAD assembly model is shown on the right. We each modeled and fabricated different parts utilizing the lathe and CNC mill in the machine shop and 3D printing. Below on the left is a link I machined and assembled with a gear. 
-              Next to it is our final button pressing mechanism that was 3D printed with an additional acrylic piece glued on for the bonus green button. The wiring I setup and tested &mdash; admittedly organization and cleanliness was
-              not a priority as we ended up having bigger issues.
+              <p>The final CAD assembly model is shown on the right. We each modeled and fabricated different parts utilizing the lathe and CNC mill in the machine shop and 3D printing. </p>
+              <p>Below on the left is a link I machined and assembled with a gear. 
+              Next to it is our final button pressing mechanism that was 3D printed with an additional acrylic piece glued on for the bonus green button. The initial wiring I setup and tested is shown on the right.</p>
             </div>
             <div class = "project-media">
               <div class = "image-container">
@@ -135,7 +135,7 @@
           </div>
           <div class = "project-full">
             <h3 class = "mini-title">Where things went wrong!</h3>
-            <p>During our initial testing, I identified that the transmission ratio was too low, casuing our belt to slip under load. 
+            <p>During our initial testing, I identified that the transmission ratio was too low, causing our belt to slip under load. 
               Our system lacked sufficient torque to overcome the mechanical resistance so we first tried to increase the tension in the belt as shown in the images below. However, the tension required for stable, reliable operation
               was still greater than what this configuration could maintain.</p>
           </div>
@@ -153,8 +153,8 @@
              <div class = "project-text">
                 <p>As my teammates explored different approaches to maintain sufficient belt tension over the following days, I focused on developing and refining
                   the Arduino control code so we could transition smoothly into testing once the system was ready. Yet, by the night before our final demonstration, the 
-                  assembly remained nonfunctional. Determined to resolve the issue, I combed through the lab's spare components and found a compatible gear with the same tooth profile but a smaller diameter to increase our transmission ratio. 
-                  After carefully modifying it by drilling out the press-fit pin (shown on the right), we replaced the original driving gear, allowing for full motion to the linkage and achieving reliable performance just in time. </p>
+                  assembly remained nonfunctional. Determined to resolve the issue, I raked through the lab's spare components and found a compatible gear with the same tooth profile but a smaller diameter to increase our transmission ratio. 
+                  After carefully modifying it by drilling out the press-fit pin (shown on the right), we replaced the original driving gear, enabling full motion to the linkage and achieving reliable performance just in time. </p>
              </div>
              <div class = "project-media">
                <div class = "image-container">
