--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,7 @@
 
           <div class = "project-two-col">
             <div class = "project-text">
-              <p>The final CAD assembly model is shown on the right. We each modeled and fabricated different parts utilizing the lathe and CNC mill in the machine shop and 3D printing. </p>
+              <p>On the right is the final CAD assembly model. We each modeled and fabricated different parts utilizing the lathe and CNC mill in the machine shop and 3D printing. </p>
               <p>Below on the left is a link I machined and assembled with a gear. 
               Next to it is our final button pressing mechanism that was 3D printed with an additional acrylic piece glued on for the bonus green button. The initial wiring I setup and tested is shown on the right.</p>
             </div>
