--- a/projects.html
+++ b/projects.html
@@ -134,7 +134,7 @@
             </div>   
           </div>
           <div class = "project-full">
-            <h3 class = "mini-title">Where things went wrong!</h3>
+            <h3 class = "mini-title">When Theory Met Reality</h3>
             <p>During our initial testing, I identified that the transmission ratio was too low, causing our belt to slip under load. 
               Our system lacked sufficient torque to overcome the mechanical resistance so we first tried to increase the tension in the belt as shown in the images below. However, the tension required for stable, reliable operation
               was still greater than what this configuration could maintain.</p>
@@ -226,7 +226,7 @@
                   </div>
                 </div> 
           <div class = "project-full">
-            <h3 class = "mini-title"> Iterating and Improving the Design</h3>
+            <h3 class = "mini-title"> Design Iterations</h3>
           </div>
           <div class="robot-layout">
             <div class="image-container large">
