--- a/experience.html
+++ b/experience.html
@@ -121,18 +121,22 @@
         <!-- Centered title -->
         <div class="exp-title">
           <h3>Columbia University &mdash; Department of Mechanical Engineering</h3>
-          <h4>Teaching Assistant for Computer Graphics and Design</h4>
+          <h4>Teaching Assistant for Computer Graphics & Design</h4>
           <span class="exp-date">September 2021 - May 2023</span>
         </div>
 
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
-            <img src="images/columbia.png" alt="Columbia University Logo">
+            <img src="images/engdrawings.jpg" alt="Engineering Drawings">
           </div>
           <div class="exp-text">
             <p>
-              As a Teaching Assistant for the Computer Graphics and Design course, I led recitations and office hours, helping students with CAD, GD&T, and SolidWorks design challenges.
+              MECE 3408 Computer Graphics & Design is an introductory level Mechanical Engineering course required for the major that aims to develop a
+              better understanding of mechanical engineering design and products. Course topics include: learning basic engineering drawing principles and GD&T, developing sketching and visualization skills, 
+              and becoming proficient in SolidWorks.</p>
+              <p>As a Teaching Assistant for the Computer Graphics and Design course, I led weekly recitations to walk through additional example problems and office hours to answer any student questions.
+                I also assisted in course lab sessions in helping students individually with SolidWorks questions so the professor could smoothly run through the lab content.
             </p>
           </div>
         </div>
@@ -141,11 +145,18 @@
         <div class="exp-row second">
           <div class="exp-text">
             <p>
-              As an intern for the Office for the EVP for Research, I analyzed federal funding trends using Python and Excel, generating visualizations that informed university research strategy.
+              <b>Key Accomplishments:</b>
+              <ul>
+              <li>Created new standardized rubrics for all homework and lab assignments to ensure fair and uniform grading</li>
+              <li>Compiled example student work from each semester for upcoming ABET evaluation</li>
+              </ul>
+            </p>
+             <p>
+              <b>Skills:</b> Instructional Communication, Engineering Drawings, GD&T, Mechanical Design, SolidWorks
             </p>
           </div>
           <div class="exp-media">
-            <img src="images/columbia-research.jpg" alt="Columbia Research Work">
+            <img src="images/solidworks.jpg" alt="SolidWorks">
           </div>
         </div>
       </div>
