--- a/experience.html
+++ b/experience.html
@@ -132,10 +132,9 @@
           </div>
           <div class="exp-text">
             <p>
-              MECE 3408 Computer Graphics & Design is an introductory level Mechanical Engineering course required for the major that aims to develop a
-              better understanding of mechanical engineering design and products. Course topics include: learning basic engineering drawing principles and GD&T, developing sketching and visualization skills, 
+              <b>MECE 3408 Computer Graphics & Design</b> is an introductory level Mechanical Engineering course required for the major that focuses on mechanical engineering design and products. Course topics include: learning basic engineering drawing principles and GD&T, developing sketching and visualization skills, 
               and becoming proficient in SolidWorks.</p>
-              <p>As a Teaching Assistant for the Computer Graphics and Design course, I led weekly recitations to walk through additional example problems and office hours to answer any student questions.
+              <p>As a Teaching Assistant for this course, I led weekly recitations to walk through additional example problems and office hours to answer any student questions.
                 I also assisted in course lab sessions in helping students individually with SolidWorks questions so the professor could smoothly run through the lab content.
             </p>
           </div>
@@ -174,7 +173,7 @@
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
-            <img src="images/columbia.png" alt="Columbia University Logo">
+            <img src="images/evpchart2.png" alt="R&D Funding">
           </div>
           <div class="exp-text">
             <p>
@@ -191,7 +190,7 @@
             </p>
           </div>
           <div class="exp-media">
-            <img src="images/columbia-research.jpg" alt="Columbia Research Work">
+            <img src="images/evpchart1.png" alt="Federal Funding Private Universities">
           </div>
         </div>
       </div>
