--- a/experience.html
+++ b/experience.html
@@ -177,7 +177,8 @@
           </div>
           <div class="exp-text">
             <p>
-              As a Teaching Assistant for the Computer Graphics and Design course, I led recitations and office hours, helping students with CAD, GD&T, and SolidWorks design challenges.
+              The Office of the Executive Vice President for Research focuses primarily on the University's research programs in terms of funding, compliance, and quality. 
+              
             </p>
           </div>
         </div>
@@ -186,7 +187,11 @@
         <div class="exp-row second">
           <div class="exp-text">
             <p>
-              As an intern for the Office for the EVP for Research, I analyzed federal funding trends using Python and Excel, generating visualizations that informed university research strategy.
+              As the student intern for the Office, I regularly tracked federal research awards, updated pages on the University's website for the Office, 
+              and analyzed various funding data using Python and Excel, generating visualizations that informed university research strategy (examples in images).
+            </p>
+             <p>
+              <b>Skills:</b> Microsoft Excel, Python, Data Visualization
             </p>
           </div>
           <div class="exp-media">
