--- a/experience.html
+++ b/experience.html
@@ -187,8 +187,8 @@
         <div class="exp-row second">
           <div class="exp-text">
             <p>
-              As the student intern for the Office, I regularly tracked federal research awards, updated pages on the University's website for the Office, 
-              and analyzed various funding data using Python and Excel, generating visualizations that informed university research strategy (examples in images).
+              As the student intern for the Office, I regularly tracked federal research proposals and awards, updated pages on the University's website for the Office, 
+              and analyzed various funding data using Python and Excel, generating data visualizations that informed university's research strategy (examples in images).
             </p>
              <p>
               <b>Skills:</b> Microsoft Excel, Python, Data Visualization
