--- a/index.html
+++ b/index.html
@@ -51,11 +51,14 @@
   <section id="contact" class="contact">
     <div class="container">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:youremail@example.com">christinejzou56@gmail.com</a></p>
-      <p>LinkedIn: <a href="#" target="_blank">https://www.linkedin.com/in/christine-zou-374807188/</a></p>
-      <p>GitHub: <a href="#" target="_blank">github.com/christine-zou</a></p>
+      <p>
+        <a href="mailto:christinejzou56@gmail.com">Email</a> |
+        <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> |
+        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+      </p>
     </div>
   </section>
+
 
   <!-- Footer -->
   <footer>
