--- a/index.html
+++ b/index.html
@@ -47,24 +47,15 @@
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="contact" class="contact">
-    <div class="container contact-center">
-      <p>
-        <a href="mailto:christinejzou56@gmail.com">Email</a> |
-        <a href="https://www.linkedin.com/in/christine-zou-374807188/" target="_blank">LinkedIn</a> |
-        <a href="https://github.com/christine-zou" target="_blank">GitHub</a>
-      </p>
-    </div>
-  </section>
 
   <!-- Footer -->
   <footer>
     <div class="container">
+      <p>
+        <a href="mailto:christinejzou56@gmail.com">Email</a> |
+        <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> |
+        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+      </p>
       <p>© 2025 Christine Zou</p>
     </div>
   </footer>
-
-  <script src="script.js"></script>
-</body>
-</html>
