--- a/experience.html
+++ b/experience.html
@@ -40,7 +40,7 @@
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
-            <img src="images/lm-hel.png" alt="Lockheed Martin HEL">
+            <img src="images/lockheed.png" alt="Lockheed Martin">
           </div>
           <div class="exp-text">
             <p>
@@ -65,7 +65,7 @@
             </p>
           </div>
           <div class="exp-media">
-            <img src="images/lm-helsi.jpg" alt="Lockheed Martin HEL">
+            <img src="images/lm-hel.png" alt="Lockheed Martin HEL">
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
-            <img src="images/tk-trailer.jpg" alt="ThermoKing Trailers">
+            <img src="images/thermoking.png" alt="ThermoKing">
           </div>
           <div class="exp-text">
             <p>
@@ -109,7 +109,7 @@
             </p>
           </div>
           <div class="exp-media">
-            <img src="images/tk-vehicles.jpg" alt="ThermoKing Vehicles">
+            <img src="images/tk-trailer.jpg" alt="ThermoKing Trailers">
           </div>
         </div>
       </div>
