--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
+      <h3>Contact</h3>
       <p>
         <a href="mailto:christinejzou56@gmail.com">Email</a> |
         <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> |
