--- a/experience.html
+++ b/experience.html
@@ -212,8 +212,8 @@
     <h3>Contact</h3>
     <p>
       <a href="mailto:christinejzou56@gmail.com">Email</a> |
-      <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> |
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/christine-zou-374807188/" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/christine-zou" target="_blank">GitHub</a>
     </p>
     <p>© 2025 Christine Zou</p>
   </div>
