--- a/projects.html
+++ b/projects.html
@@ -285,9 +285,15 @@
 
   <!-- Footer -->
   <footer>
-    <div class="container">
-      <p>© 2025 Christine Zou</p>
-    </div>
+  <div class="container">
+    <h3>Contact</h3>
+    <p>
+      <a href="mailto:christinejzou56@gmail.com">Email</a> |
+      <a href="https://www.linkedin.com/in/christine-zou-374807188/" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/christine-zou" target="_blank">GitHub</a>
+    </p>
+    <p>© 2025 Christine Zou</p>
+  </div>
   </footer>
 
   <!-- Script -->
