--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
 
       <!-- Project navigation buttons -->
       <div class="project-buttons">
-        <button onclick="currentSlide(1)">Redesigning soccer cleats</button>
+        <button onclick="currentSlide(1)">Redesigned Soccer Cleats</button>
         <button onclick="currentSlide(2)">Automated Linkage</button>
         <button onclick="currentSlide(3)">CloudBot</button>
       </div>
