--- a/research.html
+++ b/research.html
@@ -11,8 +11,11 @@
   <!-- Header -->
   <header>
     <div class="container nav-container">
-      <h1 class="site-title">Christine Zou</h1>
-      <nav class="site-nav">
+      <!-- Hamburger icon -->
+      <div class="menu-toggle" id="menu-toggle">
+        ☰
+      </div>
+      <nav class="site-nav" id ="site-nav">
         <a href="index.html">About</a>
         <a href="experience.html">Experience</a>
         <a href="projects.html">Projects</a>
