--- a/experience.html
+++ b/experience.html
@@ -13,7 +13,9 @@
     <div class="container nav-container">
       <!-- Hamburger icon -->
       <div class="menu-toggle" id="menu-toggle">
-        ☰
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
       <nav class="site-nav" id ="site-nav">
         <a href="index.html">About</a>
