--- a/experience.html
+++ b/experience.html
@@ -44,7 +44,7 @@
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
-            <img src="images/lockheed.png" alt="Lockheed Martin">
+            <img src="images/LMT_BIG.svg" alt="Lockheed Martin">
           </div>
           <div class="exp-text">
             <p>
