--- a/experience.html
+++ b/experience.html
@@ -88,7 +88,7 @@
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
-            <img src="images/thermoking.png" alt="ThermoKing">
+            <img src="images/thermoking.svg" alt="ThermoKing">
           </div>
           <div class="exp-text">
             <p>
