--- a/research.html
+++ b/research.html
@@ -40,6 +40,14 @@
         <p>
           Description of your first research project. Explain the problem statement, your role, and outcomes.
         </p>
+        <div class="pptx-container">
+          <iframe 
+            src="https://view.officeapps.live.com/op/embed.aspx?src=https://raw.githubusercontent.com/christine-zou/christine-zou.github.io/main/files/REU_Final.pptx" 
+            width="100%" 
+            height="600px" 
+            frameborder="0">
+          </iframe>
+        </div>
       </div>
 
       <button class="accordion">
@@ -48,8 +56,15 @@
       </button>
       <div class="panel">
         <p>
-          Description of your second research project. Include tools, methodology, and results.
+          <b>Research Objective &mdash;</b> Design a chemical/biological sensor for olfactory sensing on unmanned vehicles
         </p>
+        <div class="pdf-container">
+          <iframe 
+            src="files/AFRL_poster.pdf" 
+            width="100%" 
+            height="600px">
+          </iframe>
+        </div>
       </div>
 
       <button class="accordion">
@@ -58,8 +73,15 @@
       </button>
       <div class="panel">
         <p>
-          Description of your third research project. Highlight impact, papers, or presentations.
+          <b>Research Objective &mdash;</b> Determine the the relationship between vibration and cavitation activity in a fuel injector
         </p>
+        <div class="pdf-container">
+          <iframe 
+            src="files/RISE_poster.pdf" 
+            width="100%" 
+            height="600px">
+          </iframe>
+        </div>
       </div>
 
     </div>
