--- a/research.html
+++ b/research.html
@@ -77,7 +77,7 @@
         </p>
         <div class="pdf-container">
           <iframe 
-            src="files/RISE_poster.pdf" 
+            src="files/RISE_POSTER.pdf" 
             width="100%" 
             height="600px">
           </iframe>
