--- a/research.html
+++ b/research.html
@@ -79,7 +79,7 @@
           <iframe 
             src="files/RISE_POSTER.pdf" 
             width="100%" 
-            >
+            height="1000px">
           </iframe>
         </div>
       </div>
