--- a/research.html
+++ b/research.html
@@ -38,7 +38,7 @@
       </button>
       <div class="panel">
         <p>
-          Description of your first research project. Explain the problem statement, your role, and outcomes.
+          This research was conducted and funded as a part of the National Science Foundation Research Experience for Undergraduates program.
         </p>
         <div class="pptx-container">
           <iframe 
@@ -56,7 +56,7 @@
       </button>
       <div class="panel">
         <p>
-          <b>Research Objective &mdash;</b> Design a chemical/biological sensor for olfactory sensing on unmanned vehicles
+          This research was conducted and funded by the Air Force Research Laboratory Scholars Program.
         </p>
         <div class="pdf-container">
           <iframe 
@@ -73,7 +73,7 @@
       </button>
       <div class="panel">
         <p>
-          <b>Research Objective &mdash;</b> Determine the the relationship between vibration and cavitation activity in a fuel injector
+          This research was a part of Boston University's Research in Science & Engineering (RISE) program.
         </p>
         <div class="pdf-container">
           <iframe 
