--- a/research.html
+++ b/research.html
@@ -38,7 +38,7 @@
       </button>
       <div class="panel">
         <p>
-          This research was conducted and funded as a part of the National Science Foundation Research Experience for Undergraduates program.
+          This research was conducted and funded as a part of the National Science Foundation Research Experience for Undergraduates program (Summer 2020).
         </p>
         <div class="pptx-container">
           <iframe 
@@ -56,7 +56,7 @@
       </button>
       <div class="panel">
         <p>
-          This research was conducted and funded by the Air Force Research Laboratory Scholars Program.
+          This research was conducted and funded by the Air Force Research Laboratory Scholars Program (Summer 2019).
         </p>
         <div class="pdf-container">
           <iframe 
@@ -73,7 +73,7 @@
       </button>
       <div class="panel">
         <p>
-          This research was a part of Boston University's Research in Science & Engineering (RISE) program.
+          This research was a part of Boston University's Research in Science & Engineering (RISE) program (Summer 2018).
         </p>
         <div class="pdf-container">
           <iframe 
