--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
       <h2>Christine Zou </h2>
       <p class="tagline">Engineer • Designer • Problem Solver</p>
       <p class="intro">
-        Welcome to my portfolio. I build things that are simple, elegant, and effective. 
-        Scroll down to see my work and experience.
+        Welcome to my portfolio. 
+      </p>
+      <p>
+        I graduated with a B.S. in Mechanical Engineering from Columbia University.
+      </p>
+      <p>
+        Outside of work, I (extremely) recently became a volunteer at the North End Makerspace. I'm currently working towards getting certified on different tools
+        (updates to come). In my free time, I love dancing, baking, and traveling.
       </p>
     </div>
   </section>
