--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
       <img src="images/profile.jpg" alt="Christine Zou" class="profile-photo">
       <h2>Christine Zou </h2>
       <p class="tagline">Engineer • Designer • Problem Solver</p>
+      <p class="tagline">Education: B.S. in Mechanical Engineering from Columbia University</p>
       <p class="intro">
-        Welcome to my portfolio. 
-      </p>
-      <p>
-        I graduated with a B.S. in Mechanical Engineering from Columbia University.
+        Welcome to my portfolio. I'm a mechanical engineer passionate about designing precise, purposeful systems that merge creativity with technical depth.
+        I approach every project with curiosity, care, and the goal of turning complex challenges into elegant, manufacturable solutions.
       </p>
       <p>
         Outside of work, I (extremely) recently became a volunteer at the North End Makerspace. I'm currently working towards getting certified on different tools
