--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       <img src="images/profile.jpg" alt="Christine Zou" class="profile-photo">
       <h2>Christine Zou </h2>
       <p class="tagline">Engineer • Designer • Problem Solver</p>
-      <p class="tagline">Education: B.S. in Mechanical Engineering from Columbia University</p>
+      <div class="edu-badge">B.S. Mechanical Engineering, Columbia University</div>
       <p class="intro">
         Welcome to my portfolio. I'm a mechanical engineer passionate about designing precise, purposeful systems that merge creativity with technical depth.
         I approach every project with curiosity, care, and the goal of turning complex challenges into elegant, manufacturable solutions.
       </p>
-      <p>
+      <p class="intro">
         Outside of work, I (extremely) recently became a volunteer at the North End Makerspace. I'm currently working towards getting certified on different tools
         (updates to come). In my free time, I love dancing, baking, and traveling.
       </p>
