--- a/index.html
+++ b/index.html
@@ -31,15 +31,13 @@
     <div class="container hero-container">
       <img src="images/profile.jpg" alt="Christine Zou" class="profile-photo">
       <h2>Christine Zou </h2>
-      <div class="hero-icons">
-        <div class="icon-item">
-          🎓 B.S. Mechanical Engineering, Columbia University
-        </div>
-        <div class="icon-item">
-          📍 Seattle, WA
+      <div class="hero-header">
+        <h2>Christine Zou</h2>
+        <div class="hero-subinfo">
+          <p>Engineer • Designer • Problem Solver</p>
+          <p class="education">B.S. Mechanical Engineering, Columbia University</p>
         </div>
       </div>
-
       <p class="tagline">Engineer • Designer • Problem Solver</p>
       <p class="intro">
         Welcome to my portfolio. I'm a mechanical engineer passionate about designing precise, purposeful systems that merge creativity with technical depth.
