--- a/index.html
+++ b/index.html
@@ -38,12 +38,16 @@
         </div>
       </div>
       <p class="intro">
-        Welcome to my portfolio. I'm a mechanical engineer passionate about designing precise, purposeful systems that merge creativity with technical depth.
-        I approach every project with curiosity, care, and the goal of turning complex challenges into elegant, manufacturable solutions.
+        Welcome to my portfolio.
       </p>
       <p class="intro">
-        Outside of work, I (extremely) recently became a volunteer at the North End Makerspace. I'm currently working towards getting certified on different tools
-        (updates to come). In my free time, I love dancing, baking, and traveling.
+        I'm a mechanical engineer passionate about balancing creativity and technical depth in my designs.
+        I approach every project with curiosity and attention to detail, aiming to turn complex challenges into practical solutions.
+        I enjoy learning and tackling new challenges both in my professional and personal life. Outside of work, I (very) recently became a volunteer at the North End Makerspace. I'm currently working towards getting certified on different tools
+        (updates to come). I also love dancing and baking where I have more freedom with creativity.
+      </p>
+      <p class="intro">
+        
       </p>
     </div>
   </section>
