--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
           <p class="education">B.S. Mechanical Engineering, Columbia University</p>
         </div>
       </div>
-      <p class="intro">
+      <p class="welcome-text">
         Welcome to my portfolio.
       </p>
-      <p class="intro">
+      <p class="intro-small">
         I'm a mechanical engineer passionate about balancing creativity and technical depth in my designs.
         I approach every project with curiosity and attention to detail, aiming to turn complex challenges into practical solutions. My interests center on automated systems, mechanical design and analysis, and the development of innovative engineering solutions.
-        I enjoy learning and tackling new challenges both in my professional and personal life. Outside of work, I (very) recently became a volunteer at the North End Makerspace. I'm currently working towards getting certified on different tools
-        (updates to come). I also love dancing and baking where I have more freedom with creativity.
+        I enjoy learning and tackling new challenges both in my professional and personal life. Outside of work, I (very) recently became a volunteer at the North End Makerspace (updates to come). I also love dancing and baking.
       </p>
       <p class="intro">
         
