--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       </div>
       <p class="intro-small">
         I'm a mechanical engineer passionate about balancing creativity and technical depth in my designs.
-        I approach every project with curiosity and attention to detail, aiming to turn complex challenges into practical solutions. My interests center on automated systems, mechanical design and analysis, and the development of innovative engineering solutions.
-        I enjoy learning and tackling new challenges both in my professional and personal life. Outside of work, I (very) recently became a volunteer at the <a href = "https://northendmakers.org/">North End Makerspace</a> (updates to come). I also love dancing and <a href ="https://www.instagram.com/cakesxchristine/">baking</a>.
+        I value curiosity, attention to detail, and a commitment to continuous learning — always seeking out new challenges that expand my technical and creative abilities. My interests center on automated systems, mechanical design and analysis, and the development of innovative engineering solutions.
+        Outside of work, I (very) recently became a volunteer at the <a href = "https://northendmakers.org/">North End Makerspace</a> (updates to come). I also love dancing and <a href ="https://www.instagram.com/cakesxchristine/">baking</a>.
       </p>
     </div>
   </section>
