--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <!-- Hero Section -->
   <section id="home" class="hero">
     <div class="container hero-container">
-      <p class="welcome-text">
-        Welcome to my portfolio.
+      <p class="welcome-header">
+        Welcome to my portfolio
       </p>
       <img src="images/profile.jpg" alt="Christine Zou" class="profile-photo">
       <div class="hero-header">
