--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
   <!-- Hero Section -->
   <section id="home" class="hero">
     <div class="container hero-container">
-      <p class="welcome-header">
-        Welcome to my portfolio
-      </p>
+      <h2>Welcome to my portfolio</h2>
       <img src="images/profile.jpg" alt="Christine Zou" class="profile-photo">
       <div class="hero-header">
         <h2>Christine Zou</h2>
