--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h2>Welcome to my portfolio</h2>
       <img src="images/profile.jpg" alt="Christine Zou" class="profile-photo">
       <div class="hero-header">
-        <h2 class = "welcome-header">Christine Zou</h2>
+        <div class = "welcome-header">Christine Zou</div>
         <div class="hero-subinfo">
           <p>Engineer • Designer • Problem Solver</p>
           <p class="education">B.S. Mechanical Engineering, Columbia University</p>
