--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p class="intro-small">
         I'm a mechanical engineer passionate about balancing creativity and technical depth in my designs.
         I value curiosity, attention to detail, and a commitment to continuous learning — always seeking out new challenges that expand my technical and creative abilities. My interests center on automated systems, mechanical design and analysis, and the development of innovative engineering solutions.
-        Outside of work, I (very) recently became a volunteer at the <a href = "https://northendmakers.org/">North End Makerspace</a> (updates to come). I also love dancing and <a href ="https://www.instagram.com/cakesxchristine/">baking</a>.
+        Outside of work, I (very) recently became a volunteer at the <a href = "https://northendmakers.org/" target="_blank">North End Makerspace</a> (updates to come). I also love dancing and <a href ="https://www.instagram.com/cakesxchristine/" target="_blank">baking</a>.
       </p>
     </div>
   </section>
