--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- Hero Section -->
   <section id="home" class="hero">
-    <div class="container hero-container">
+    <div class="container">
       <h2>Welcome to my portfolio</h2>
       <img src="images/profile.jpg" alt="Christine Zou" class="profile-photo">
       <div class="hero-header">
