--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="hero-header">
         <div class = "welcome-header">Christine Zou</div>
         <div class="hero-subinfo">
-          <p><b>Engineer • Designer • Problem Solver</b></p>
+          <p><b>Engineer • Designer • Innovator</b></p>
           <p class="education">B.S. Mechanical Engineering, Columbia University</p>
         </div>
       </div>
