--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </p>
       <p class="intro-small">
         My interests center on automated systems, mechanical design and analysis, and the development of innovative engineering solutions.
-        Outside of work, I (very) recently became a volunteer at the <a href = "https://northendmakers.org/" target="_blank">North End Makerspace</a> (updates to come). I also love dancing and <a href ="https://www.instagram.com/cakesxchristine/" target="_blank">baking</a>.
+        Outside of work, I (very) recently became a volunteer at the <a href = "https://northendmakers.org/" target="_blank">North End Makerspace</a> (updates to come). I also enjoy dancing and <a href ="https://www.instagram.com/cakesxchristine/" target="_blank">baking</a>.
       </p>
     </div>
   </section>
