--- a/research.html
+++ b/research.html
@@ -77,7 +77,7 @@
         </p>
         <div class="pdf-container">
           <iframe 
-            src="files/RISE_POSTER.pdf" 
+            src="https://docs.google.com/gview?embedded=true&url=https://github.com/christine-zou/christine-zou.github.io/raw/main/files/RISE_POSTER.pdf" 
             width="100%" 
             height="1200px">
           </iframe>
