--- a/research.html
+++ b/research.html
@@ -60,9 +60,9 @@
         </p>
         <div class="pdf-container">
           <iframe 
-            src="files/AFRL_poster.pdf" 
+            src="https://docs.google.com/gview?embedded=true&url=https://github.com/christine-zou/christine-zou.github.io/raw/main/files/AFRL_poster.pdf" 
             width="100%" 
-            height="1000px">
+            height="800px">
           </iframe>
         </div>
       </div>
@@ -79,7 +79,7 @@
           <iframe 
             src="https://docs.google.com/gview?embedded=true&url=https://github.com/christine-zou/christine-zou.github.io/raw/main/files/RISE_POSTER.pdf" 
             width="100%" 
-            height="1200px">
+            height="1000px">
           </iframe>
         </div>
       </div>
