--- a/research.html
+++ b/research.html
@@ -58,12 +58,14 @@
         <p>
           This research was conducted and funded by the Air Force Research Laboratory Scholars Program (Summer 2019).
         </p>
-        <div class="pdf-container">
+        <div class="pdf-container clickable-pdf">
+          <a href="https://github.com/christine-zou/christine-zou.github.io/raw/main/files/RAFRL_poster.pdf" target="_blank">
           <iframe 
             src="https://docs.google.com/gview?embedded=true&url=https://github.com/christine-zou/christine-zou.github.io/raw/main/files/AFRL_poster.pdf" 
             width="100%" 
             height="800px">
-          </iframe>
+          ></iframe>
+          </a>
         </div>
       </div>
 
@@ -75,12 +77,14 @@
         <p>
           This research was a part of Boston University's Research in Science & Engineering (RISE) program (Summer 2018).
         </p>
-        <div class="pdf-container">
+        <div class="pdf-container clickable-pdf">
+          <a href="https://github.com/christine-zou/christine-zou.github.io/raw/main/files/RISE_POSTER.pdf" target="_blank">
           <iframe 
             src="https://docs.google.com/gview?embedded=true&url=https://github.com/christine-zou/christine-zou.github.io/raw/main/files/RISE_POSTER.pdf" 
             width="100%" 
             height="1000px">
-          </iframe>
+          ></iframe>
+          </a>
         </div>
       </div>
 
