--- a/experience.html
+++ b/experience.html
@@ -159,7 +159,7 @@
             </p>
           </div>
           <div class="exp-media">
-            <img src="images/solidworks.jpg" alt="SolidWorks">
+            <img src="images/solidworks-logo-1.svg" alt="SolidWorks">
           </div>
         </div>
       </div>
