--- a/experience.html
+++ b/experience.html
@@ -44,7 +44,10 @@
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
-            <img src="images/LMT_BIG.svg" alt="Lockheed Martin">
+            <div class = "image-container">
+                <img src="images/LMT_BIG.svg" alt="Lockheed Martin">
+                <div class = "caption">Lockheed Martin</div>
+              </div>
           </div>
           <div class="exp-text">
             <p>
@@ -69,7 +72,10 @@
             </p>
           </div>
           <div class="exp-media">
-            <img src="images/lm-hel.png" alt="Lockheed Martin HEL">
+            <div class = "image-container">
+                <img src="images/lm-hel.png" alt="Lockheed Martin HEL">
+                <div class = "caption">High Energy Laser</div>
+              </div>
           </div>
         </div>
       </div>
@@ -88,7 +94,10 @@
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
-            <img src="images/thermoking.svg" alt="ThermoKing">
+            <div class = "image-container">
+                <img src="images/thermoking.svg" alt="ThermoKing">
+                <div class = "caption">ThermoKing</div>
+              </div>
           </div>
           <div class="exp-text">
             <p>
@@ -113,7 +122,10 @@
             </p>
           </div>
           <div class="exp-media">
-            <img src="images/tk-trailer.jpg" alt="ThermoKing Trailers">
+            <div class = "image-container">
+                <img src="images/tk-trailer.jpg" alt="ThermoKing Trailers">
+                <div class = "caption">ThermoKing Trailer Products</div>
+              </div>
           </div>
         </div>
       </div>
@@ -132,7 +144,10 @@
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
-            <img src="images/engdrawings.jpg" alt="Engineering Drawings">
+            <div class = "image-container">
+                <img src="images/engdrawings.jpg" alt="Engineering Drawings">
+                <div class = "caption">Engineering Drawing</div>
+              </div>
           </div>
           <div class="exp-text">
             <p>
@@ -159,7 +174,10 @@
             </p>
           </div>
           <div class="exp-media">
-            <img src="images/solidworks-logo-1.svg" alt="SolidWorks">
+            <div class = "image-container">
+                <img src="images/solidworks-logo-1.svg" alt="SolidWorks">
+                <div class = "caption">SolidWorks</div>
+              </div>
           </div>
         </div>
       </div>
@@ -177,7 +195,10 @@
         <!-- Row 1: Logo left, intro text right -->
         <div class="exp-row">
           <div class="exp-media">
-            <img src="images/evpchart2.png" alt="R&D Funding">
+            <div class = "image-container">
+                <img src="images/evpchart2.png" alt="R&D Funding">
+                <div class = "caption">R&D Funding by Source</div>
+              </div>
           </div>
           <div class="exp-text">
             <p>
@@ -199,7 +220,10 @@
             </p>
           </div>
           <div class="exp-media">
-            <img src="images/evpchart1.png" alt="Federal Funding Private Universities">
+            <div class = "image-container">
+                <img src="images/evpchart1.png" alt="Federal Funding Private Universities">
+                <div class = "caption">Federal Funding for top 30 private universities</div>
+              </div>
           </div>
         </div>
       </div>
