Correct spelling of 'automated' to 'automation'

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         I value curiosity, attention to detail, and a commitment to continuous learning — always seeking out new challenges that expand my technical and creative abilities. 
       </p>
       <p class="intro-small">
-        My interests center on automated systems, mechanical design and analysis, and the development of innovative engineering solutions.
+        My interests center on automation systems, mechanical design and analysis, and the development of innovative engineering solutions.
         Outside of work, I (very) recently became a volunteer at the <a href = "https://northendmakers.org/" target="_blank">North End Makerspace</a> (updates to come). I also enjoy dancing and <a href ="https://www.instagram.com/cakesxchristine/" target="_blank">baking</a>.
       </p>
     </div>
